--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/supabase": "^1.4.6",
     "@supabase/supabase-js": "^2.48.1",
     "nuxt": "^3.15.1",
+    "tone": "^15.1.22",
     "vue": "latest",
     "vue-router": "latest"
   },
